feat: prevent matching on "UNKNOWN" GMC Number
Also removing logging of records which are likely "duplicates".
It wasn't compatible with stream operation and isn't much use anymore.

chore: code smells

TIS21-2873: Update ElasticSearch from TIS